# airbander

./: .gitignore  README.md  pyproject.toml  requirements.txt  withJson.py
src/: chunker.py  transcribe2.py
src/airbander_lib/: __init__.py  chunker.py  core.py  transcriber.py
tests/: test_chunker.py  test_preproc.py  test_transcriber.py
